<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <!-- Información básica del proyecto -->
  <groupId>org.ToDoList</groupId> <!-- Identificador único del grupo -->
  <artifactId>ToDoList</artifactId> <!-- Identificador único del artefacto -->
  <version>1.0-SNAPSHOT</version> <!-- Versión del proyecto -->
  <packaging>jar</packaging> <!-- Tipo de empaquetado -->

  <name>ToDoList</name> <!-- Nombre del proyecto -->
  <url>http://maven.apache.org</url> <!-- URL del proyecto -->

  <!-- Propiedades del proyecto -->
  <properties>
    <!-- Ruta al SDK de JavaFX, importante para evitar problemas en diferentes sistemas operativos -->
    <!-- Ruta al SDK de JavaFX -->
    <PATH_TO_FX>C:\Program Files\Java\javafx-sdk-21.0.5\lib</PATH_TO_FX>
    <java.version>17</java.version> <!-- Versión de Java usada en el proyecto -->
    <maven.compiler.source>${java.version}</maven.compiler.source> <!-- Versión de origen del compilador -->
    <maven.compiler.target>${java.version}</maven.compiler.target> <!-- Versión de destino del compilador -->
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding> <!-- Codificación del proyecto -->
  </properties>

  <!-- Dependencias del proyecto -->
  <dependencies>
    <!-- MySQL Connector: Para la conexión con bases de datos MySQL -->
    <dependency>
      <groupId>com.mysql</groupId>
      <artifactId>mysql-connector-j</artifactId>
      <version>8.0.33</version>
    </dependency>

    <!-- JUnit 5: Para realizar pruebas unitarias -->
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-api</artifactId>
      <version>5.8.1</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
      <version>5.8.1</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-params</artifactId>
      <version>5.8.1</version>
      <scope>test</scope>
    </dependency>

    <!-- Hibernate Core: Para ORM (Mapeo objeto-relacional) con Hibernate -->
    <dependency>
      <groupId>org.hibernate.orm</groupId>
      <artifactId>hibernate-core</artifactId>
      <version>6.6.2.Final</version> <!-- Usa la última versión de Hibernate -->
    </dependency>

    <!-- JavaFX: Dependencias para la interfaz de usuario -->
    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-swing</artifactId>
      <version>21.0.5</version>
    </dependency>
    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-fxml</artifactId>
      <version>21.0.5</version>
    </dependency>
    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-graphics</artifactId>
      <version>21.0.5</version>
    </dependency>
    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-controls</artifactId>
      <version>21.0.5</version>
    </dependency>

    <!-- SLF4J: API para el registro de logs -->
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
      <version>2.0.16</version>
    </dependency>

    <!-- https://mvnrepository.com/artifact/ch.qos.logback/logback-classic -->
    <dependency>
      <groupId>ch.qos.logback</groupId>
      <artifactId>logback-classic</artifactId>
      <version>1.5.16</version>
    </dependency>


    <!-- Microsoft Graph SDK -->
    <!-- https://mvnrepository.com/artifact/com.microsoft.graph/microsoft-graph -->
    <!-- Microsoft Graph SDK -->
    <dependency>
      <groupId>com.microsoft.graph</groupId>
      <artifactId>microsoft-graph</artifactId>
      <version>6.24.0</version>
    </dependency>
    <dependency>
      <groupId>com.microsoft.graph</groupId>
      <artifactId>microsoft-graph-core</artifactId>
      <version>3.4.0</version>
    </dependency>



    <!-- MSAL4J para autenticación con Azure -->
    <!-- https://mvnrepository.com/artifact/com.microsoft.azure/msal4j -->
    <dependency>
      <groupId>com.microsoft.azure</groupId>
      <artifactId>msal4j</artifactId>
      <version>1.18.0</version>
    </dependency>


    <!-- JSON (Jackson) para trabajar con Microsoft Graph -->
    <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-databind</artifactId>
      <version>2.15.2</version>
    </dependency>



    <!-- OkHttp para realizar peticiones HTTP -->
    <!-- https://mvnrepository.com/artifact/com.squareup.okhttp3/okhttp -->
    <dependency>
      <groupId>com.squareup.okhttp3</groupId>
      <artifactId>okhttp</artifactId>
      <version>4.12.0</version>
    </dependency>


    <!-- https://mvnrepository.com/artifact/com.microsoft.kiota/microsoft-kiota-http-okHttp -->
    <dependency>
      <groupId>com.microsoft.kiota</groupId>
      <artifactId>microsoft-kiota-http-okHttp</artifactId>
      <version>1.8.2</version>
      <scope>runtime</scope>
    </dependency>

    <dependency>
      <groupId>io.github.cdimascio</groupId>
      <artifactId>dotenv-java</artifactId>
      <version>3.0.0</version>
    </dependency>

  </dependencies>

  <!-- Configuración de la compilación del proyecto -->
  <build>
    <!-- Configuración de Maven Compiler Plugin para asegurar la correcta versión de Java -->
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
        <configuration>
          <source>${maven.compiler.source}</source>
          <target>${maven.compiler.target}</target>
        </configuration>
      </plugin>

      <!-- Plugin para ejecutar JavaFX -->
      <plugin>
        <groupId>org.openjfx</groupId>
        <artifactId>javafx-maven-plugin</artifactId>
        <version>0.0.8</version>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>run</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <mainClass>**.Main</mainClass>
        </configuration>
      </plugin>

      <!-- Plugin para ejecutar la aplicación usando exec-maven-plugin -->
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>exec-maven-plugin</artifactId>
        <version>3.0.0</version>
        <configuration>
          <mainClass>**.Main</mainClass>
          <arguments>
            <argument>--module-path</argument>
            <argument>${PATH_TO_FX}</argument>
            <argument>--add-modules</argument>
            <argument>javafx.controls,javafx.fxml</argument>
          </arguments>
        </configuration>
      </plugin>

    </plugins>

    <!-- Recursos para incluir archivos FXML -->
    <resources>
      <resource>
        <directory>src/main/resources</directory>
        <includes>
          <include>**/*.fxml</include>
        </includes>
      </resource>
      <resource>
        <directory>src/main/resources</directory>
        <includes>
          <include>**/*.xml</include>
        </includes>
      </resource>
      <resource>
        <directory>src/main/resources</directory>
        <includes>
          <include>**/*.css</include>
        </includes>
      </resource>
    </resources>

  </build>

</project>
